--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "fromtheattic",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
