Updated admin dashboard to display uploaded products

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
       "dest": "/public/images/$1"
     },
     {
+      "src": "/js/(.*)",
+      "dest": "/public/js/$1"
+    },
+    {
       "handle": "filesystem"
     },
     {
