--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.21.1",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
