--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "my-node-project",
+  "name": "art-gallery",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "pg": "^8.11.3"
+    "@supabase/supabase-js": "^2.46.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "nodemon": "^3.0.2"
   }
-} 
+}
